# srcery-convert

./: .gitignore  Cargo.toml  LICENSE  README.md  palette.toml
src/: main.rs  palette.rs
