[package]
name = "srcery-convert"
version = "0.1.0"
description = "Convert input image to srcery colorscheme"
authors = ["Daniel Berg <mail@roosta.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
image = "0.23.14"
imageproc = "0.22.0"
itertools = "0.10.0"
toml = "0.5"
serde = { version = "1.0.126", features = ["derive"] }
