[package]
name = "srcery-convert"
version = "0.1.1"
description = "Convert input image to srcery colorscheme"
authors = ["Daniel Berg <mail@roosta.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
image = "0.25.2"
imageproc = "0.25.0"
itertools = "0.13.0"
serde = { version = "1.0.205", features = ["derive"] }
toml = "0.8.19"
